--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,11 +1,16 @@
 .image-list {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 0 10px;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-row-gap: 400px;
+    grid-column-gap: 30px;
     grid-auto-rows: 10px;
 }
 
 .image-list img {
-    width: 250px;
+    /* width: 250px; */
     justify-content: center;
+}
+
+.ui.cards~.ui.cards {
+    margin-top: -20;
 }
