--- a/src/css/ImageList.css
+++ b/src/css/ImageList.css
@@ -1,7 +1,7 @@
 .image-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    grid-row-gap: 400px;
+    grid-row-gap: 500px;
     grid-column-gap: 30px;
     grid-auto-rows: 10px;
 }
@@ -9,6 +9,7 @@
 .image-list img {
     /* width: 250px; */
     justify-content: center;
+    max-width: 100%;
 }
 
 .ui.cards~.ui.cards {
